# KOTINOBOMBARDINO

./: CMakeLists.txt
include/: flyingcat.hpp
src/: flyingcat.cpp  main.cpp  tests.cpp
